# Lock-And-Key

./: .bazelrc  .gitignore  ARCHITECTURE.md  BUILD  BUILD.bazel  MODULE.bazel  README  README.md  WORKSPACE  index.html  pyproject.toml  requirements.txt  requirements_lock.txt  zensical.toml
.devcontainer/: devcontainer.json
.github/: README.md  WORKFLOW_CHAIN.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: README.md  ci.yml  docs.yml  python-package.yml
docs/: README.md  index.md
docs/api/: cli.md  main.md
docs/api/config/: settings.md
docs/api/core/: scanner.md  ui.md
docs/api/providers/: azure.md  gcp.md
docs/api/providers/aws/: aws_policy_collector.md  aws_provider.md
docs/api/providers/aws/resources/: base.md  iam.md  iam_policy_analyzer.md
docs/api/types/: base.md  credentials.md  exceptions.md  scan_results.md
docs/source/: api.rst  conf.py  development.rst  index.rst  installation.rst  usage.rst
lock_and_key/: BUILD  BUILD.bazel  __about__.py  __init__.py  cli.py  test_runner.py
lock_and_key/config/: __init__.py
lock_and_key/core/: __init__.py  scanner.py  ui.py
lock_and_key/exceptions/: __init__.py
lock_and_key/models/: __init__.py  scan_results.py
lock_and_key/modules/aws/: base.py  iam.py
lock_and_key/modules/aws/object_classes/: iam.py
lock_and_key/providers/: __init__.py  aws.py  azure.py  base.py  gcp.py
lock_and_key/providers/aws/: aws_policy_collector.py  aws_provider.py
lock_and_key/providers/aws/resources/: base.py  iam.py  iam_policy_analyzer.py  s3.py
lock_and_key/tests/models/aws/: test_base.py
lock_and_key/tests/models/aws/clients/: test_base.py
lock_and_key/types/: __init__.py  base.py  credentials.py  exceptions.py  scan_results.py
lock_and_key_tests/: BUILD
lock_and_key_tests/models/aws/: test_base.py
site/: 404.html  index.html  objects.inv  search.json  sitemap.xml
site/api/cli/: index.html
site/api/config/settings/: index.html
site/api/core/scanner/: index.html
site/api/core/ui/: index.html
site/api/main/: index.html
site/api/providers/aws/aws_policy_collector/: index.html
site/api/providers/aws/aws_provider/: index.html
site/api/providers/aws/resources/base/: index.html
site/api/providers/aws/resources/iam/: index.html
site/api/providers/aws/resources/iam_policy_analyzer/: index.html
site/api/providers/azure/: index.html
site/api/providers/gcp/: index.html
site/api/types/base/: index.html
site/api/types/credentials/: index.html
site/api/types/exceptions/: index.html
site/api/types/scan_results/: index.html
site/architecture/: index.html
src/lock_and_key/: __about__.py
src/lock_and_key/modules/aws/: iam.py
src/modules/aws/: base.py  iam.py
src/modules/aws/object_classes/: iam.py
tests/: BUILD.bazel  README.md  run_tests.py  test___about__.py  test___init__.py  test_cli.py  test_scanner.py  test_type_checking.py
tests/config/: __init__.py  test_settings.py
tests/core/: test_scanner.py  test_ui.py
tests/exceptions/: test_base.py
tests/models/: test_credentials.py  test_scan_results.py
tests/providers/: __init__.py  test_aws.py  test_azure.py  test_base.py  test_gcp.py
tests/providers/aws/: __init__.py  test_aws_provider.py
tests/providers/aws/resources/: test_base.py  test_iam.py  test_s3.py
tests/types/: __init__.py
tools/linting/: BUILD.bazel  format.py  linters.bzl  runner.py
