load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test_base",
    srcs = ["test_runner.py", "tests/models/aws/test_base.py"] + glob(["tests/**/__init__.py"]),
    main = "test_runner.py",
    deps = [
        ":lock_and_key",
        requirement("pytest"),
    ],
)



filegroup(
    name = "all_py_files",
    srcs = glob(["**/*.py"]),
    visibility = ["//visibility:public"],
)

py_library(
    name = "lock_and_key",
    srcs = glob(["**/*.py"], exclude=["tests/**"]),
    visibility = ["//visibility:public"],
    deps = [
        requirement("boto3"),
        requirement("pydantic"),
        requirement("mypy-boto3-iam"),
    ],
)

py_binary(
    name = "cli",
    srcs = glob(["*.py"]),
    main = "cli.py",
    deps = [":lock_and_key"],
)
