load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_test")

# Tests are now in separate directory



filegroup(
    name = "all_py_files",
    srcs = glob(["**/*.py"]),
    visibility = ["//visibility:public"],
)

py_library(
    name = "lock_and_key",
    srcs = glob(["**/*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        requirement("pydantic"),
        requirement("click"),
        requirement("rich"),
    ],
)

py_binary(
    name = "cli",
    srcs = ["main.py"],
    main = "main.py",
    deps = [
        ":lock_and_key",
        requirement("click"),
        requirement("rich")
    ],
)
