load("@rules_python//python:defs.bzl", "py_test")
load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "lock_and_key_tests",
    srcs = glob(["**/*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        "//lock_and_key:lock_and_key",
        requirement("click"),
        requirement("rich"),
        requirement("pydantic"),
        requirement("boto3"),
    ],
)

[py_test(
    name = test_file.replace("/", "_").replace(".py", "").replace("test_", "", 1),
    srcs = [test_file] + ([test_file.rsplit("/", 1)[0] + "/__init__.py"] if "/" in test_file else []),
    main = test_file,
    deps = [":lock_and_key_tests"],
) for test_file in glob(["test_*.py", "**/test_*.py"])]